// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` (EmptyExpr -> NGEmptyExpression) ast 1`] = `
NGEmptyExpression { comments: [] }
> 1 | 
    | ^
`;

exports[` a ; b  (Chain -> NGChainedExpression) ast 1`] = `
NGChainedExpression { expressions: ["Identifier", "Identifier"], comments: [] }
> 1 |  a ; b 
    |  ^^^^^
--------------------------------------------------------------------------------
Identifier { name: "a" }
> 1 |  a ; b 
    |  ^
--------------------------------------------------------------------------------
Identifier { name: "b" }
> 1 |  a ; b 
    |      ^
`;

exports[` a | b  (BindingPipe -> NGPipeExpression) ast 1`] = `
NGPipeExpression { left: "Identifier", right: "Identifier", arguments: [], comments: [] }
> 1 |  a | b 
    |  ^^^^^
--------------------------------------------------------------------------------
Identifier { name: "a" }
> 1 |  a | b 
    |  ^
--------------------------------------------------------------------------------
Identifier { name: "b" }
> 1 |  a | b 
    |      ^
`;

exports[` a | b : c  (BindingPipe -> NGPipeExpression) ast 1`] = `
NGPipeExpression {
  left: "Identifier",
  right: "Identifier",
  arguments: ["Identifier"],
  comments: [],
}
> 1 |  a | b : c 
    |  ^^^^^^^^^
--------------------------------------------------------------------------------
Identifier { name: "a" }
> 1 |  a | b : c 
    |  ^
--------------------------------------------------------------------------------
Identifier { name: "b" }
> 1 |  a | b : c 
    |      ^
--------------------------------------------------------------------------------
Identifier { name: "c" }
> 1 |  a | b : c 
    |          ^
`;

exports[` javascript : void(0)  (Quote -> NGQuotedExpression) ast 1`] = `
NGQuotedExpression { prefix: "javascript", value: " void(0) ", comments: [] }
> 1 |  javascript : void(0) 
    |  ^^^^^^^^^^^^^^^^^^^^
`;
